remove height from main container to fix overflow issue

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,5 +33,4 @@ body {
   position: relative;
   top: 80px;
   overflow: hidden;
-  height: 100em;
 }
